[gd_scene load_steps=9 format=3 uid="uid://cno1rwolwocvj"]

[ext_resource type="Script" path="res://CharacterBody3D.gd" id="1_iegxj"]
[ext_resource type="PackedScene" uid="uid://dxojjv8y4u754" path="res://scenes/health_component.tscn" id="2_3ywos"]
[ext_resource type="PackedScene" uid="uid://01ff8ukaxr24" path="res://scenes/hitbox_component.tscn" id="3_jm6wr"]
[ext_resource type="PackedScene" uid="uid://buhvd50xvu31f" path="res://scenes/rifle.tscn" id="4_ovuul"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_m8vgi"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_hx5jh"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_dl6bf"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ct5ah"]
radius = 0.45
height = 0.95

[node name="CharacterBody3D" type="CharacterBody3D"]
script = ExtResource("1_iegxj")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
visible = false
mesh = SubResource("CapsuleMesh_m8vgi")

[node name="HealthComponent" parent="." instance=ExtResource("2_3ywos")]

[node name="HitboxComponent" parent="." instance=ExtResource("3_jm6wr")]

[node name="hitboxCollision" type="CollisionShape3D" parent="HitboxComponent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("ConvexPolygonShape3D_hx5jh")

[node name="standingCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CapsuleShape3D_dl6bf")

[node name="crouchingCollision" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_ct5ah")
disabled = true

[node name="Neck" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Head" type="Node3D" parent="Neck"]

[node name="Camera3D" type="Camera3D" parent="Neck/Head"]

[node name="Rifle" parent="Neck/Head/Camera3D" instance=ExtResource("4_ovuul")]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0.5, -0.5, -0.5)

[node name="standingRayCast" type="RayCast3D" parent="."]
target_position = Vector3(0, 1.5, 0)

[node name="slidingRayCast" type="RayCast3D" parent="."]
